<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piotr.guardianangel.RegistrationFragment"
    android:background="#000000">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#fdfdfd"
        android:id="@+id/registration" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/registration"
        android:layout_alignParentStart="true"
        android:background="#d2e0d0"
        android:id="@+id/linearLayout"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserLabel"
            android:id="@+id/userLabel"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userRegistration"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:hint="@string/UserHintReg"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordLabel"
            android:id="@+id/passwordLabel"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password1"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:hint="@string/Password2Hint"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonRegistration"
        android:id="@+id/buttonRegister"
        android:background="@drawable/button_oval"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Język"
        android:id="@+id/switchLang"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:background="#ffffff"
        android:textColorHint="#f00a0a"
        android:textOff="EN"
        android:textOn="PL"
        android:textColorLink="#f70a0a"
        android:textStyle="bold"
        android:padding="5sp" />

</RelativeLayout>
